[package]
name = "bevy_html_lite"
version = "0.2.1"
edition = "2024"

[dependencies]
bevy = { version = "0.17.1", default-features = false }
html_lite_macros = { version = "0.2.1", path = "html_lite_macros" }
html_lite_sections = { version = "0.2.1", path = "html_lite_sections" }
itertools = "0.14.0"

[dev-dependencies]
bevy = { workspace = true, default-features = true }

[workspace]
members = [ "html_lite_sections", "html_lite_macros", "examples/*" ]

[workspace.dependencies]
bevy = { version = "0.17.1", default-features = false }

[features]
default = [ "plugin" ]
plugin = [ "bevy/default_font", "bevy/bevy_asset", "bevy/bevy_color", "bevy/bevy_text", "bevy/bevy_ui" ]
